# iam-roles-anywhere-automation

./: .gitignore  CHANGELOG.md  CLAUDE.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  SECURITY.md  cloudformation.yml  deploy.sh  local-ca-stack.yml  setup-ca.sh  setup-client.sh
central-ca/: README.md  central-ca-stack.yml  code-stack.yml  infra-stack.yml  onboard.py  request-cert.sh
central-ca/iamroles-alias/: README.md  pyproject.toml
central-ca/lambda/: handler.py  kms_ca.py
central-ca/rolesanywhere-onboard/: README.md  pyproject.toml
central-ca/rolesanywhere-onboard/src/rolesanywhere_onboard/: __init__.py  cli.py  core.py
