[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rolesanywhere-onboard"
version = "1.1.0"
description = "Plug-and-play client for onboarding users against a self-hosted IAM Roles Anywhere Central CA"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Viresh Solanki" }]
# 3.8 is the real floor: both modules use `from __future__ import annotations`,
# so the `str | None` union syntax works well below 3.10, and nothing here uses
# match statements, walrus operators, or any other newer-only syntax. Pinning
# this higher would lock out users for no reason -- the point of this package
# is to work anywhere.
requires-python = ">=3.8"
keywords = ["aws", "iam-roles-anywhere", "certificate-authority", "x509", "pki"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/vireshsolanki/iam-roles-anywhere-automation"
Issues = "https://github.com/vireshsolanki/iam-roles-anywhere-automation/issues"

[project.scripts]
# Deliberately shorter than the distribution name: you `pip install
# rolesanywhere-onboard` but type `iamroles`. PyPI imposes no rule that these
# must match.
iamroles = "rolesanywhere_onboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
